sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * FFI-safe playback mode enum.
 */
typedef enum FfiPlaybackMode {
    /**
     * Restart from frame 0 after the last frame.
     */
    Loop = 0,
    /**
     * Stop at the last frame and mark the animation as finished.
     */
    OneShot = 1,
} FfiPlaybackMode;
/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-compatible contact information from a collision.
 */
typedef struct GoudContact {
    /**
     * Contact point X coordinate
     */
    float point_x;
    /**
     * Contact point Y coordinate
     */
    float point_y;
    /**
     * Collision normal X component (unit vector pointing from A to B)
     */
    float normal_x;
    /**
     * Collision normal Y component
     */
    float normal_y;
    /**
     * Penetration depth (positive = overlapping)
     */
    float penetration;
} GoudContact;
/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe Color representation.
 */
typedef struct FfiColor {
    /**
     * Red component (0.0 - 1.0).
     */
    float r;
    /**
     * Green component (0.0 - 1.0).
     */
    float g;
    /**
     * Blue component (0.0 - 1.0).
     */
    float b;
    /**
     * Alpha component (0.0 - 1.0).
     */
    float a;
} FfiColor;
/**
 * FFI-safe Rect representation.
 */
typedef struct FfiRect {
    /**
     * X position of the rectangle.
     */
    float x;
    /**
     * Y position of the rectangle.
     */
    float y;
    /**
     * Width of the rectangle.
     */
    float width;
    /**
     * Height of the rectangle.
     */
    float height;
} FfiRect;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe, flat representation of a `SpriteAnimator` snapshot.
 */
typedef struct FfiSpriteAnimator {
    /**
     * Index of the current frame in the animation clip.
     */
    uint32_t current_frame;
    /**
     * Accumulated time since the last frame advance (seconds).
     */
    float elapsed;
    /**
     * Whether the animation is currently playing.
     */
    bool playing;
    /**
     * Whether a OneShot animation has completed.
     */
    bool finished;
    /**
     * Seconds per frame.
     */
    float frame_duration;
    /**
     * Playback mode.
     */
    enum FfiPlaybackMode mode;
    /**
     * Total number of frames in the clip.
     */
    uint32_t frame_count;
} FfiSpriteAnimator;
/**
 * FFI-safe Text representation.
 */
typedef struct FfiText {
    /**
     * Font asset handle (index and generation packed as u64).
     */
    uint64_t font_handle;
    /**
     * Font size in pixels.
     */
    float font_size;
    /**
     * Text color red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Text color green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Text color blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Text color alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Horizontal text alignment (0 = Left, 1 = Center, 2 = Right).
     */
    uint8_t alignment;
    /**
     * Maximum width for word-wrapping (valid only when has_max_width is true).
     */
    float max_width;
    /**
     * Whether max_width is set.
     */
    bool has_max_width;
    /**
     * Line spacing multiplier (1.0 = default spacing).
     */
    float line_spacing;
} FfiText;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-safe Mat3x3 representation (9 floats in column-major order).
 */
typedef struct FfiMat3x3 {
    /**
     * Matrix elements in column-major order.
     */
    float m[9];
} FfiMat3x3;
/**
 * Opaque handle to an `EngineConfig` on the heap.
 */
typedef void *EngineConfigHandle;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * FFI-safe aggregate network statistics for a provider handle.
 */
typedef struct FfiNetworkStats {
    /**
     * Total bytes sent across all connections.
     */
    uint64_t bytes_sent;
    /**
     * Total bytes received across all connections.
     */
    uint64_t bytes_received;
    /**
     * Total packets sent across all connections.
     */
    uint64_t packets_sent;
    /**
     * Total packets received across all connections.
     */
    uint64_t packets_received;
    /**
     * Total packets lost across all connections.
     */
    uint64_t packets_lost;
    /**
     * Most recent RTT sample in milliseconds.
     */
    float rtt_ms;
    /**
     * Send bandwidth over the rolling 1-second window.
     */
    float send_bandwidth_bytes_per_sec;
    /**
     * Receive bandwidth over the rolling 1-second window.
     */
    float receive_bandwidth_bytes_per_sec;
    /**
     * Packet loss percentage over the rolling 1-second window.
     */
    float packet_loss_percent;
    /**
     * Rolling RTT jitter in milliseconds.
     */
    float jitter_ms;
} FfiNetworkStats;
/**
 * FFI-safe rendering statistics.
 */
typedef struct GoudRenderStats {
    /**
     * Number of draw calls this frame
     */
    uint32_t draw_calls;
    /**
     * Number of triangles rendered
     */
    uint32_t triangles;
    /**
     * Number of texture binds
     */
    uint32_t texture_binds;
    /**
     * Number of shader binds
     */
    uint32_t shader_binds;
} GoudRenderStats;
/**
 * FFI-safe event payload used by deterministic event polling/read APIs.
 */
typedef struct FfiUiEvent {
    /**
     * Numeric UI event kind (matches the engine's UI event enum discriminant).
     */
    uint32_t event_kind;
    /**
     * Packed node id of the event source.
     */
    uint64_t node_id;
    /**
     * Packed node id that previously had focus/hover state, or `INVALID_NODE_U64`.
     */
    uint64_t previous_node_id;
    /**
     * Packed node id that currently has focus/hover state, or `INVALID_NODE_U64`.
     */
    uint64_t current_node_id;
} FfiUiEvent;
/**
 * An RGBA color with FFI-safe memory layout.
 */
typedef struct Color {
    /**
     * The red component of the color.
     */
    float r;
    /**
     * The green component of the color.
     */
    float g;
    /**
     * The blue component of the color.
     */
    float b;
    /**
     * The alpha (transparency) component of the color.
     */
    float a;
} Color;
/**
 * FFI-safe style payload used by [`widget::goud_ui_set_style`].
 */
typedef struct FfiUiStyle {
    /**
     * True when `background_color` should be applied.
     */
    bool has_background_color;
    /**
     * Background color override when `has_background_color` is true.
     */
    struct Color background_color;
    /**
     * True when `foreground_color` should be applied.
     */
    bool has_foreground_color;
    /**
     * Foreground/text color override when `has_foreground_color` is true.
     */
    struct Color foreground_color;
    /**
     * True when `border_color` should be applied.
     */
    bool has_border_color;
    /**
     * Border color override when `has_border_color` is true.
     */
    struct Color border_color;
    /**
     * True when `border_width` should be applied.
     */
    bool has_border_width;
    /**
     * Border width override when `has_border_width` is true.
     */
    float border_width;
    /**
     * True when font family bytes should be read from `font_family_ptr/len`.
     */
    bool has_font_family;
    /**
     * UTF-8 font family bytes pointer; nullable when not set.
     */
    const uint8_t *font_family_ptr;
    /**
     * Length in bytes for `font_family_ptr`.
     */
    size_t font_family_len;
    /**
     * True when `font_size` should be applied.
     */
    bool has_font_size;
    /**
     * Font size override when `has_font_size` is true.
     */
    float font_size;
    /**
     * True when texture path bytes should be read from `texture_path_ptr/len`.
     */
    bool has_texture_path;
    /**
     * UTF-8 texture path bytes pointer; nullable when not set.
     */
    const uint8_t *texture_path_ptr;
    /**
     * Length in bytes for `texture_path_ptr`.
     */
    size_t texture_path_len;
    /**
     * True when `widget_spacing` should be applied.
     */
    bool has_widget_spacing;
    /**
     * Widget spacing override when `has_widget_spacing` is true.
     */
    float widget_spacing;
} FfiUiStyle;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Creates a new engine context.
 */
struct GoudContextId goud_context_create(void);
/**
 * Destroys an engine context, freeing all associated resources.
 */
bool goud_context_destroy(struct GoudContextId context_id);
/**
 * Checks if a context ID is valid.
 */
bool goud_context_is_valid(struct GoudContextId context_id);
/* === Engine Config === */

/**
 * Creates a new default `EngineConfig` and returns an opaque handle.
 */
EngineConfigHandle goud_engine_config_create(void);
/**
 * Frees an `EngineConfig` handle without creating a context.
 */
void goud_engine_config_destroy(EngineConfigHandle handle);
/**
 * Sets the window title on an `EngineConfig`.
 */
bool goud_engine_config_set_title(EngineConfigHandle handle, const char *title);
/**
 * Sets the window size on an `EngineConfig`.
 */
bool goud_engine_config_set_size(EngineConfigHandle handle, uint32_t width, uint32_t height);
/**
 * Enables or disables vsync on an `EngineConfig`.
 */
bool goud_engine_config_set_vsync(EngineConfigHandle handle, bool enabled);
/**
 * Sets the fullscreen mode on an `EngineConfig`.
 */
bool goud_engine_config_set_fullscreen(EngineConfigHandle handle, uint32_t mode);
/**
 * Sets the target FPS on an `EngineConfig`.
 */
bool goud_engine_config_set_target_fps(EngineConfigHandle handle, uint32_t fps);
/**
 * Enables or disables the FPS overlay on an `EngineConfig`.
 */
bool goud_engine_config_set_fps_overlay(EngineConfigHandle handle, bool enabled);
/**
 * Enables or disables the physics debug visualization overlay for physics worlds
 */
bool goud_engine_config_set_physics_debug(EngineConfigHandle handle, bool enabled);
/**
 * Sets the 2D physics backend used when building providers from `EngineConfig`.
 */
bool goud_engine_config_set_physics_backend_2d(EngineConfigHandle handle, uint32_t backend);
/**
 * Consumes an `EngineConfig` handle and creates a windowed engine context.
 */
struct GoudContextId goud_engine_create(EngineConfigHandle handle);