sdks/python/goud_engine/generated/_ffi.py

"""This file is AUTO-GENERATED by GoudEngine codegen. DO NOT EDIT."""

import ctypes
import os
import platform
import shutil
import subprocess
from pathlib import Path

# ── Library loading ──

def _has_required_symbol(lib_path: Path, symbol: str) -> bool:
    # Some environments ship stale release artifacts; avoid selecting them when newer symbols exist elsewhere.
    # Fall back to permissive loading if platform-native export inspection is unavailable.
    try:
        nm = shutil.which("nm")
        if nm:
            result = subprocess.run([nm, "-g", str(lib_path)], check=False, capture_output=True, text=True)
            if result.returncode == 0:
                return symbol in result.stdout
        if platform.system() == "Windows":
            library = ctypes.WinDLL(str(lib_path))
            return hasattr(library, symbol)
    except Exception:
        return True
    return True

def _env_library_candidates(name: str):
    raw = os.environ.get("GOUD_ENGINE_LIB", "").strip()
    if not raw:
        return []
    path = Path(raw)
    if path.is_file():
        return [path]
    return [path / name]

def _load_library():
    """Load the GoudEngine shared library."""
    system = platform.system()
    if system == "Darwin":
        ext, prefix = ".dylib", "lib"
    elif system == "Linux":
        ext, prefix = ".so", "lib"
    elif system == "Windows":
        ext, prefix = ".dll", ""
    else:
        raise OSError(f"Unsupported platform: {system}")

    name = f"{prefix}goud_engine{ext}"
    search = [
        *_env_library_candidates(name),
        Path(__file__).parent / name,
        Path(__file__).parent.parent / name,
        Path(__file__).parent.parent.parent.parent.parent / "target" / "debug" / name,
        Path(__file__).parent.parent.parent.parent.parent / "target" / "release" / name,
    ]
    for p in search:
        if p.exists():
            if not _has_required_symbol(p, "goud_engine_config_set_physics_debug"):
                continue
            return ctypes.cdll.LoadLibrary(str(p))
    raise OSError(f"Could not find {name}. Set GOUD_ENGINE_LIB env var.")

_lib = _load_library()

# ── FFI struct types ──

class GoudContextId(ctypes.Structure):
    _fields_ = [("_bits", ctypes.c_uint64)]

class GoudResult(ctypes.Structure):
    _fields_ = [("code", ctypes.c_int32), ("success", ctypes.c_bool)]

class FfiColor(ctypes.Structure):
    _fields_ = [
        ("r", ctypes.c_float),
        ("g", ctypes.c_float),
        ("b", ctypes.c_float),
        ("a", ctypes.c_float)
    ]

class FfiVec2(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_float),
        ("y", ctypes.c_float)
    ]

class FfiRect(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("width", ctypes.c_float),
        ("height", ctypes.c_float)
    ]

class FfiTransform2D(ctypes.Structure):
    _fields_ = [
        ("position_x", ctypes.c_float),
        ("position_y", ctypes.c_float),
        ("rotation", ctypes.c_float),
        ("scale_x", ctypes.c_float),
        ("scale_y", ctypes.c_float)
    ]

class FfiSprite(ctypes.Structure):
    _fields_ = [
        ("texture_handle", ctypes.c_uint64),
        ("color_r", ctypes.c_float),
        ("color_g", ctypes.c_float),
        ("color_b", ctypes.c_float),
        ("color_a", ctypes.c_float),
        ("source_rect_x", ctypes.c_float),
        ("source_rect_y", ctypes.c_float),
        ("source_rect_width", ctypes.c_float),
        ("source_rect_height", ctypes.c_float),
        ("has_source_rect", ctypes.c_bool),
        ("flip_x", ctypes.c_bool),
        ("flip_y", ctypes.c_bool),
        ("anchor_x", ctypes.c_float),
        ("anchor_y", ctypes.c_float),
        ("custom_size_x", ctypes.c_float),
        ("custom_size_y", ctypes.c_float),
        ("has_custom_size", ctypes.c_bool)
    ]

class GoudRenderStats(ctypes.Structure):
    _fields_ = [
        ("draw_calls", ctypes.c_uint32),
        ("triangles", ctypes.c_uint32),
        ("texture_binds", ctypes.c_uint32),
        ("shader_binds", ctypes.c_uint32)
    ]

class GoudFpsStats(ctypes.Structure):
    _fields_ = [
        ("current_fps", ctypes.c_float),
        ("min_fps", ctypes.c_float),
        ("max_fps", ctypes.c_float),
        ("avg_fps", ctypes.c_float),
        ("frame_time_ms", ctypes.c_float)
    ]

class GoudContact(ctypes.Structure):
    _fields_ = [
        ("point_x", ctypes.c_float),
        ("point_y", ctypes.c_float),
        ("normal_x", ctypes.c_float),
        ("normal_y", ctypes.c_float),
        ("penetration", ctypes.c_float)
    ]

class FfiPhysicsRaycastHit2D(ctypes.Structure):
    _fields_ = [
        ("body_handle", ctypes.c_uint64),
        ("collider_handle", ctypes.c_uint64),
        ("point_x", ctypes.c_float),
        ("point_y", ctypes.c_float),
        ("normal_x", ctypes.c_float),
        ("normal_y", ctypes.c_float),
        ("distance", ctypes.c_float)
    ]

class FfiPhysicsCollisionEvent2D(ctypes.Structure):
    _fields_ = [
        ("body_a", ctypes.c_uint64),
        ("body_b", ctypes.c_uint64),
        ("kind", ctypes.c_uint32)
    ]

class FfiVec3(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("z", ctypes.c_float)
    ]

class FfiRenderCapabilities(ctypes.Structure):
    _fields_ = [
        ("max_texture_units", ctypes.c_uint32),
        ("max_texture_size", ctypes.c_uint32),
        ("supports_instancing", ctypes.c_bool),
        ("supports_compute", ctypes.c_bool),
        ("supports_msaa", ctypes.c_bool)
    ]

class FfiPhysicsCapabilities(ctypes.Structure):
    _fields_ = [
        ("supports_continuous_collision", ctypes.c_bool),
        ("supports_joints", ctypes.c_bool),
        ("max_bodies", ctypes.c_uint32)
    ]

class FfiAudioCapabilities(ctypes.Structure):
    _fields_ = [
        ("supports_spatial", ctypes.c_bool),
        ("max_channels", ctypes.c_uint32)
    ]

class FfiInputCapabilities(ctypes.Structure):
    _fields_ = [
        ("supports_gamepad", ctypes.c_bool),
        ("supports_touch", ctypes.c_bool),
        ("max_gamepads", ctypes.c_uint32)
    ]

class FfiNetworkCapabilities(ctypes.Structure):
    _fields_ = [
        ("supports_hosting", ctypes.c_bool),
        ("max_connections", ctypes.c_uint32),
        ("max_channels", ctypes.c_uint8),
        ("max_message_size", ctypes.c_uint32)
    ]

class FfiNetworkStats(ctypes.Structure):
    _fields_ = [
        ("bytes_sent", ctypes.c_uint64),
        ("bytes_received", ctypes.c_uint64),
        ("packets_sent", ctypes.c_uint64),
        ("packets_received", ctypes.c_uint64),
        ("packets_lost", ctypes.c_uint64),
        ("rtt_ms", ctypes.c_float),
        ("send_bandwidth_bytes_per_sec", ctypes.c_float),
        ("receive_bandwidth_bytes_per_sec", ctypes.c_float),
        ("packet_loss_percent", ctypes.c_float),
        ("jitter_ms", ctypes.c_float)
    ]

class FfiNetworkSimulationConfig(ctypes.Structure):
    _fields_ = [
        ("one_way_latency_ms", ctypes.c_uint32),
        ("jitter_ms", ctypes.c_uint32),
        ("packet_loss_percent", ctypes.c_float)
    ]

class FfiMat3x3(ctypes.Structure):
    _fields_ = [
        ("m", ctypes.c_float * 9)
    ]

class FfiSpriteAnimator(ctypes.Structure):
    _fields_ = [
        ("current_frame", ctypes.c_uint32),
        ("elapsed", ctypes.c_float),
        ("playing", ctypes.c_bool),
        ("finished", ctypes.c_bool),
        ("frame_duration", ctypes.c_float),
        ("mode", ctypes.c_int32),
        ("frame_count", ctypes.c_uint32)
    ]

class FfiText(ctypes.Structure):
    _fields_ = [
        ("font_handle", ctypes.c_uint64),
        ("font_size", ctypes.c_float),
        ("color_r", ctypes.c_float),
        ("color_g", ctypes.c_float),
        ("color_b", ctypes.c_float),
        ("color_a", ctypes.c_float),
        ("alignment", ctypes.c_uint8),
        ("max_width", ctypes.c_float),
        ("has_max_width", ctypes.c_bool),
        ("line_spacing", ctypes.c_float)
    ]

class FfiUiStyle(ctypes.Structure):
    _fields_ = [
        ("has_background_color", ctypes.c_bool),
        ("background_color", FfiColor),
        ("has_foreground_color", ctypes.c_bool),
        ("foreground_color", FfiColor),
        ("has_border_color", ctypes.c_bool),
        ("border_color", FfiColor),
        ("has_border_width", ctypes.c_bool),
        ("border_width", ctypes.c_float),
        ("has_font_family", ctypes.c_bool),
        ("font_family_ptr", ctypes.c_void_p),
        ("font_family_len", ctypes.c_size_t),
        ("has_font_size", ctypes.c_bool),
        ("font_size", ctypes.c_float),
        ("has_texture_path", ctypes.c_bool),
        ("texture_path_ptr", ctypes.c_void_p),
        ("texture_path_len", ctypes.c_size_t),
        ("has_widget_spacing", ctypes.c_bool),
        ("widget_spacing", ctypes.c_float)
    ]

class FfiUiEvent(ctypes.Structure):
    _fields_ = [
        ("event_kind", ctypes.c_uint32),
        ("node_id", ctypes.c_uint64),
        ("previous_node_id", ctypes.c_uint64),
        ("current_node_id", ctypes.c_uint64)
    ]

# ── Function signatures ──

def _setup():
    # engine_config
    _lib.goud_engine_config_create.argtypes = []
    _lib.goud_engine_config_create.restype = ctypes.c_void_p
    _lib.goud_engine_config_destroy.argtypes = [ctypes.c_void_p]
    _lib.goud_engine_config_destroy.restype = None
    _lib.goud_engine_config_set_title.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    _lib.goud_engine_config_set_title.restype = ctypes.c_bool
    _lib.goud_engine_config_set_size.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.c_uint32]
    _lib.goud_engine_config_set_size.restype = ctypes.c_bool
    _lib.goud_engine_config_set_vsync.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_vsync.restype = ctypes.c_bool
    _lib.goud_engine_config_set_fullscreen.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_fullscreen.restype = ctypes.c_bool
    _lib.goud_engine_config_set_target_fps.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_target_fps.restype = ctypes.c_bool
    _lib.goud_engine_config_set_fps_overlay.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_fps_overlay.restype = ctypes.c_bool
    _lib.goud_engine_config_set_physics_debug.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    _lib.goud_engine_config_set_physics_debug.restype = ctypes.c_bool
    _lib.goud_engine_config_set_physics_backend_2d.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
    _lib.goud_engine_config_set_physics_backend_2d.restype = ctypes.c_bool
    _lib.goud_engine_create.argtypes = [ctypes.c_void_p]
    _lib.goud_engine_create.restype = GoudContextId

    # context
    _lib.goud_context_create.argtypes = []
    _lib.goud_context_create.restype = GoudContextId
    _lib.goud_context_destroy.argtypes = [GoudContextId]
    _lib.goud_context_destroy.restype = ctypes.c_bool
    _lib.goud_context_is_valid.argtypes = [GoudContextId]
    _lib.goud_context_is_valid.restype = ctypes.c_bool
